--- a/app/react_app/package.json
+++ b/app/react_app/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack --mode development ./src/index.js --output-path ./static/",
+    "dev": "webpack --mode development --watch ./src/index.js --output-path ./static/",
     "build": "webpack --mode production ./src/index.js --output-path ./static/"
   },
   "keywords": [],
@@ -16,7 +16,8 @@
     "@babel/preset-react": "^7.12.5",
     "babel-loader": "^8.2.1",
     "webpack": "^5.4.0",
-    "webpack-cli": "^4.2.0"
+    "webpack-cli": "^4.2.0",
+    "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
